# new-certificazione-770

./: .gitignore  CHANGELOG.md  README.md  new-certificazione-770.spec  pyproject.toml  requirements.txt  setup.iss  version.rc
docs/: user_manual.md
scripts/: utils.py
src/: cli.py
src/new_certificazione_770/: LICENSE  __init__.py  __main__.py  config.py  helpers.py  main.py  new-certificazione-770.db
src/new_certificazione_770/controllers/: __init__.py  controller.py  result_thread.py
src/new_certificazione_770/models/: __init__.py  base_models.py  dat_model.py  repository.py
src/new_certificazione_770/views/: __init__.py  about.py  about_dialog.py  company_dialog.py  dialog.py  distributor_dialog.py  export_dialogs.py  import_dialogs.py  settings_dialog.py  widgets.py
tests/: __init__.py
