[project]
name = "new-certificazione-770"
version = "0.2.1"
description = "Application for Certificazioni 770 for company Herbalife S.p.A. to create output file for INPS fiscal application"
authors = [
    {name = "Dottorlink", email = "dottorlink@gmail.com"},
]
dependencies = [
    "tkcalendar",
    "pandas",
    "sv_ttk",
    "darkdetect",
    "sqlmodel",
    "openpyxl",
    "pydantic",
    "pyinstaller>=6.10.0",
    "git-changelog>=2.5.2",
    "pywinstyles>=1.8",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["hatchling", "hatch-pyinstaller",]
build-backend = "hatchling.build"


[tool.git-changelog]
bump = "minor"
convention = "conventional"
in-place = false
# figilter-commits = "0.0.1.."
marker-line = "<!-- insertion marker -->"
output = "CHANGELOG.md"
parse-refs = false
parse-trailers = false
provider = "github"
repository = "."
sections = "build,deps,feat,fix,refactor"
template = "keepachangelog"
version-regex = "^## \\\\[(?P<version>v?[^\\\\]]+)"
versioning = "semver"
zerover = true

[tool.pdm]
distribution = true
