[tool.poetry]
name = "new-certificazione-770"
version = "0.2.1"
description = "Application for Certificazioni 770 for company Herbalife S.p.A. to create output file for INPS fiscal application"
authors = ["Dottorlink <dottorlink@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
pyinstaller = "^6.10.0"
pywinstyles = "^1.8"
pandas = "^2.2.3"
tkcalendar = "^1.6.1"
sv-ttk = "^2.6.0"
darkdetect = "^0.8.0"
sqlmodel = "^0.0.22"
openpyxl = "^3.1.5"
pydantic = "^2.9.2"

[tool.semantic_release]
version_toml = [
    "pyproject.toml:tool.poetry.version",
]                                                    # version location
branch = "main"                                      # branch to make releases of
changelog_file = "CHANGELOG.md"                      # changelog file
build_command = "pip install poetry && poetry build" # build dists 

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-pyinstaller-plugin]
# Pyinstaller version (Optional, latest if not set)
# Does not support version constraint (eg: ^6.4)
version = "6.10.0"

# Disable UPX compression
disable-upx = true

# Include metadata from selected packages (including dependencies)
# recursive-copy-metadata = [
#      "src/certificazione_770"
# ]


[tool.poetry-pyinstaller-plugin.scripts]
# Equivalent to
new_certificazione_770 = { source = "src/cli.py", windowed = true, type = "onedir", bundle = true, hiddenimport = ['tkcalendar', 'babel.numbers', 'openpyxl'], icon = "src/new_certificazione_770/assets/main.ico"}
# Include metadata from selected packages
copy-metadata = ["sv_ttk"]


[tool.poetry-pyinstaller-plugin.package]
"README.md" = "."
"LICENSE" = "."

[tool.poetry-pyinstaller-plugin.include]
# loose files in bundle
"src/new_certificazione_770/assets/*" = "assets"
".venv/Lib/site-packages/sv_ttk" = "sv_ttk"
